# torrent-cleaner

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs  torrent.rs
