[package]
name = "torrent-cleaner"
version = "0.1.0"
edition = "2021"
description = "Torrent Cleaner commandline tool"
authors = ["Ben Forge (BenCheung0422)"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["cargo", "wrap_help"] }
indicatif = "0.17.9"
inquire = "0.7.5"
librqbit-buffers = "4.1.0"
librqbit-core = "4.0.1"
tracing-indicatif = "0.3.8"
walkdir = "2.5.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
path-clean = "1.0.1"
term-painter = "0.4.0"
humansize = "2.1.3"
