[package]
name = "torrent-cleaner"
version = "0.1.0"
edition = "2021"
description = "Torrent Cleaner commandline tool"
authors = ["Ben Forge (BenCheung0422)"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["cargo", "wrap_help"] }
indicatif = "0.17.9"
inquire = "0.7.5"
librqbit-buffers = "4.1.0"
librqbit-core = "4.0.1"
walkdir = "2.5.0"
path-clean = "1.0.1"
term-painter = "0.4.0"
term_size = "0.3.2"
unicode-truncate = "2.0.0"

[target.'cfg(linux)'.build-dependencies]
openssl = { version = "0.10", features = ["vendored"] }
